// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-components > style-loader 1`] = `
"(() => {
  var __create = Object.create;
  var __defProp = Object.defineProperty;
  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
  var __getOwnPropNames = Object.getOwnPropertyNames;
  var __getProtoOf = Object.getPrototypeOf;
  var __hasOwnProp = Object.prototype.hasOwnProperty;
  var __require = /* @__PURE__ */ ((x) => typeof require !== "undefined" ? require : typeof Proxy !== "undefined" ? new Proxy(x, {
    get: (a, b) => (typeof require !== "undefined" ? require : a)[b]
  }) : x)(function(x) {
    if (typeof require !== "undefined") return require.apply(this, arguments);
    throw Error('Dynamic require of "' + x + '" is not supported');
  });
  var __esm = (fn, res) => function __init() {
    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
  };
  var __commonJS = (cb, mod) => function __require2() {
    return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
  };
  var __copyProps = (to, from, except, desc) => {
    if (from && typeof from === "object" || typeof from === "function") {
      for (let key of __getOwnPropNames(from))
        if (!__hasOwnProp.call(to, key) && key !== except)
          __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
    }
    return to;
  };
  var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(
    // If the importer is in node compatibility mode or this is not an ESM
    // file that has been converted to a CommonJS file using a Babel-
    // compatible transform (i.e. "__esModule" has not been set), then set
    // "default" to the CommonJS "module.exports" for node compatibility.
    isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target,
    mod
  ));

  // css-loader:a.less
  var require_a = __commonJS({
    "css-loader:a.less"(exports, module) {
      module.exports = {};
    }
  });

  
  var require_a2 = __commonJS({
    "style-loader:a.less"(exports, module) {
      require_a();
      var s_app = "a__app";
      exports["app"] = s_app;
      module.exports = { "app": s_app };
    }
  });

  // css-loader:b.less
  var require_b = __commonJS({
    "css-loader:b.less"(exports, module) {
      module.exports = {};
    }
  });

  
  var require_b2 = __commonJS({
    "style-loader:b.less"(exports, module) {
      require_b();
      var s_index = "b__index";
      var s_title = "b__title";
      exports["index"] = s_index;
      exports["title"] = s_title;
      module.exports = { "index": s_index, "title": s_title };
    }
  });

  // css-loader:index.module.less
  var require_index_module = __commonJS({
    "css-loader:index.module.less"(exports, module) {
      module.exports = {};
    }
  });

  
  var require_index_module2 = __commonJS({
    "style-loader:index.module.less"(exports, module) {
      require_index_module();
      var s_foo = "index-module__foo";
      exports["foo"] = s_foo;
      module.exports = { "foo": s_foo };
    }
  });

  // __tests__/react-components/foo/index.tsx
  var import_index_module, import_react, Foo;
  var init_foo = __esm({
    "__tests__/react-components/foo/index.tsx"() {
      import_index_module = __toESM(require_index_module2());
      import_react = __toESM(__require("react"));
      Foo = () => {
        return /* @__PURE__ */ import_react.default.createElement("div", { className: import_index_module.default.foo }, "foo");
      };
    }
  });

  // __tests__/react-components/index.jsx
  var require_index = __commonJS({
    "__tests__/react-components/index.jsx"() {
      var import_react2 = __toESM(__require("react"));
      var import_client = __require("react-dom/client");
      var import_a = __toESM(require_a2());
      var import_b = __toESM(require_b2());
      init_foo();
      var App = class extends import_react2.default.Component {
        render() {
          console.warn(import_a.default, import_b.default);
          return /* @__PURE__ */ import_react2.default.createElement("div", { className: import_a.default.app }, /* @__PURE__ */ import_react2.default.createElement("h1", { className: import_b.default.title }, "Hello World"), /* @__PURE__ */ import_react2.default.createElement(Foo, null));
        }
      };
      (0, import_client.createRoot)(document.getElementById("root")).render(/* @__PURE__ */ import_react2.default.createElement(App, null));
    }
  });
  require_index();
})();
//# sourceMappingURL=index.js.map
"
`;

exports[`react-components > style-loader 2`] = `
"
.a__app {
  color: red;
  -webkit-user-select: none;
  user-select: none;
}


.b__title {
  color: green;
}
.b__index {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
}


.index-module__foo {
  color: red;
}
/*# sourceMappingURL=index.css.map */
"
`;

exports[`react-components > style-loader 3`] = `
"(() => {
  var __create = Object.create;
  var __defProp = Object.defineProperty;
  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
  var __getOwnPropNames = Object.getOwnPropertyNames;
  var __getProtoOf = Object.getPrototypeOf;
  var __hasOwnProp = Object.prototype.hasOwnProperty;
  var __require = /* @__PURE__ */ ((x) => typeof require !== "undefined" ? require : typeof Proxy !== "undefined" ? new Proxy(x, {
    get: (a, b2) => (typeof require !== "undefined" ? require : a)[b2]
  }) : x)(function(x) {
    if (typeof require !== "undefined") return require.apply(this, arguments);
    throw Error('Dynamic require of "' + x + '" is not supported');
  });
  var __esm = (fn, res) => function __init() {
    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
  };
  var __commonJS = (cb, mod) => function __require2() {
    return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
  };
  var __copyProps = (to, from, except, desc) => {
    if (from && typeof from === "object" || typeof from === "function") {
      for (let key of __getOwnPropNames(from))
        if (!__hasOwnProp.call(to, key) && key !== except)
          __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
    }
    return to;
  };
  var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(
    // If the importer is in node compatibility mode or this is not an ESM
    // file that has been converted to a CommonJS file using a Babel-
    // compatible transform (i.e. "__esModule" has not been set), then set
    // "default" to the CommonJS "module.exports" for node compatibility.
    isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target,
    mod
  ));

  // css-loader:a.less
  var require_a = __commonJS({
    "css-loader:a.less"(exports, module) {
      module.exports = {};
    }
  });

  
  var require_a2 = __commonJS({
    "style-loader:a.less"(exports, module) {
      require_a();
      var s_app = "a__app";
      exports["app"] = s_app;
      module.exports = { "app": s_app };
    }
  });

  // css-loader:index.module.less
  var require_index_module = __commonJS({
    "css-loader:index.module.less"(exports, module) {
      module.exports = {};
    }
  });

  
  var require_index_module2 = __commonJS({
    "style-loader:index.module.less"(exports, module) {
      require_index_module();
      var s_foo = "index-module__foo";
      exports["foo"] = s_foo;
      module.exports = { "foo": s_foo };
    }
  });

  // __tests__/react-components/foo/index.tsx
  var import_index_module, import_react, Foo;
  var init_foo = __esm({
    "__tests__/react-components/foo/index.tsx"() {
      import_index_module = __toESM(require_index_module2());
      import_react = __toESM(__require("react"));
      Foo = () => {
        return /* @__PURE__ */ import_react.default.createElement("div", { className: import_index_module.default.foo }, "foo");
      };
    }
  });

  // __tests__/react-components/index2.jsx
  var require_index2 = __commonJS({
    "__tests__/react-components/index2.jsx"() {
      var import_react2 = __toESM(__require("react"));
      var import_client = __require("react-dom/client");
      var import_a = __toESM(require_a2());
      init_foo();
      var App = class extends import_react2.default.Component {
        render() {
          console.warn(import_a.default, b);
          return /* @__PURE__ */ import_react2.default.createElement("div", { className: import_a.default.app }, /* @__PURE__ */ import_react2.default.createElement(Foo, null));
        }
      };
      (0, import_client.createRoot)(document.getElementById("root")).render(/* @__PURE__ */ import_react2.default.createElement(App, null));
    }
  });
  require_index2();
})();
//# sourceMappingURL=index2.js.map
"
`;

exports[`react-components > style-loader 4`] = `
"
.a__app {
  color: red;
  -webkit-user-select: none;
  user-select: none;
}


.index-module__foo {
  color: red;
}
/*# sourceMappingURL=index2.css.map */
"
`;
